--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
-    "recoil": "^0.3.1"
+    "recoil": "^0.3.1",
+    "victory": "^35.8.6"
   }
 }
