--- a/package.json
+++ b/package.json
@@ -86,17 +86,24 @@
     "typescript": "^4.3.3"
   },
   "dependencies": {
+    "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/pickers": "^3.3.10",
     "@material-ui/styles": "^4.11.4",
+    "@types/pouchdb": "^6.4.0",
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.7",
     "@types/react-router-dom": "^5.1.7",
+    "@types/shortid": "0.0.29",
+    "date-fns": "^2.22.1",
     "electron-squirrel-startup": "^1.0.0",
+    "pouchdb": "^7.2.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "recoil": "^0.3.1",
+    "shortid": "^2.2.16",
     "victory": "^35.8.6"
   }
 }
