--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
         {
           "name": "@electron-forge/maker-zip",
           "platforms": [
-            "darwin"
+            "darwin",
+            "mac",
+            "linux"
           ]
         },
         {
